# Restaurant_site

./: .coveragerc  .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
booking/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_remove_reservation_reservation_duration_and_more.py  0003_alter_reservation_guests_amount_and_more.py  0004_alter_reservation_guests_amount.py  0005_reservation_reservation_commentary.py  0006_alter_reservation_owner.py  0007_alter_reservation_owner_and_more.py  0008_reservation_reservation_status.py
booking/templates/booking/: about_us.html  index.html  main.html  reservation.html  reservation_confirm_delete.html  reservation_form.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_feedback_alter_user_last_name.py
users/templates/: login.html  login0.html
users/templates/users/: profile.html  user_form.html
